--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -465,6 +465,7 @@ spa:
     # discount_rate: 'Discount rate'
     # district: 'District'
     # districts: 'Districts'
+    division: 'X'
     # document_templates: 'Document templates'
     # documents: 'Documents'
     # downpayment: 'Downpayment'
@@ -791,12 +792,14 @@ spa:
     # story: 'Story'
     # string_value: 'String value'
     # subdir: 'Subdir'
+    subdivision: 'Y'
     # subject: 'Subject'
     # subscription_nature: 'Subscription type'
     # subscription_natures: 'Subscription types'
     # subscription_period: 'Subscription period'
     # subscription_quantity: 'Subscription quantity'
     # subscriptions: 'Subscriptions'
+    subsubdivision: 'Z'
     # sum_method: 'Sum method'
     # supplier: 'Supplier'
     # supplier_account: 'Supplier account'
@@ -878,9 +881,6 @@ spa:
     # with_deposit: 'With deposit'
     # with_tracking: 'With tracking'
     # with_transport: 'With transport'
-    x: 'X'
-    y: 'Y'
-    z: 'Z'
   models:
     account:
       # label: '%{number} - %{name}'
