Update Debian changelog

--- a/installer/debian/debian/changelog
+++ b/installer/debian/debian/changelog
@@ -1,3 +1,9 @@
+ekylibre (0.0.4) stable; urgency=low
+
+  * Migrates to Rails 3.2.2
+
+ -- Brice Texier <brice.texier@ekylibre.org>  Tue, 21 Feb 2012 15:11:32 +0200
+
 ekylibre (0.3.2.1) stable; urgency=low
 
   * Fixes bug on debian packages due to missing dependencies
