--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -551,6 +551,7 @@ fra:
         one: '%{count} erreur a empêché l''enregistrement (%{model})'
         other: '%{count} erreurs ont empêché l''enregistrement (%{model})'
   labels:
+    last_computed_balance: 'Dernière balance calculée'
     account_accruals: 'Comptes de régularisation' #!
     account_attorney_to_create: '-- Créer automatiquement un compte mandataire --' #!
     account_claims_assets: 'Créances' #!
