--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -779,6 +779,7 @@ jpn:
     # journals: 'Journals'
     # land_parcel_name: 'Land parcel name'
     # land_parcels: 'Land parcels'
+    # last_computed_balance: 'Last computed balance'
     # last_payment_amount: 'Amount of the last payment'
     # last_payment_date: 'Date of the last payment'
     # left_balance_amount: 'Left Balance Amount'
