--- a/config/locales/eng/support.yml
+++ b/config/locales/eng/support.yml
@@ -74,6 +74,7 @@ eng:
       format:
         delimiter: ','
         format: '%u%n'
+        negative_format: '-%n%u'
         precision: 2
         separator: '.'
         unit: '$'
