--- a/config/locales/fra/countries.yml
+++ b/config/locales/fra/countries.yml
@@ -206,6 +206,7 @@ fra:
     sn: 'Sénégal'
     so: 'Somalie'
     sr: 'Suriname'
+    # ss: 'South Sudan'
     st: 'Sao Tomé-Et-Principe'
     sv: 'El Salvador'
     sy: 'Syrienne, République Arabe'
