--- a/config/locales/jpn/countries.yml
+++ b/config/locales/jpn/countries.yml
@@ -206,6 +206,7 @@ jpn:
     sn: 'セネガル'
     so: 'ソマリア'
     sr: 'スリナム'
+    # ss: 'South Sudan'
     st: 'サントメ・プリンシペ'
     sv: 'エルサルバドル'
     sy: 'シリア'
