--- a/config/locales/spa/countries.yml
+++ b/config/locales/spa/countries.yml
@@ -206,6 +206,7 @@ spa:
     sn: 'Senegal'
     so: 'Somalia'
     sr: 'Surinam'
+    # ss: 'South Sudan'
     st: 'Santo Tomé y Príncipe'
     sv: 'El Salvador'
     sy: 'Siria'
