--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -82,7 +82,7 @@ eng:
       new: 'Add a new document template'
       print: 'Print document template'
     entities:
-      destroy: 'Remove person' #!
+      destroy: 'Remove person' #?
       edit: 'Edit person: %{full_name}'
       export: 'Export people'
       import: 'Import people'
@@ -324,7 +324,7 @@ eng:
       load: 'Load missing sequences'
       new: 'Add a new sequence'
     sessions:
-      destroy: 'Log out' #!
+      destroy: 'Log out' #?
       new: 'New session'
       renew: 'Renew session'
     settings:
@@ -335,8 +335,8 @@ eng:
       import: 'Import data'
       restore: 'Restore data'
     stock_moves:
-      edit: 'Edit the stock move: %{name}' #!
-      new: 'add a new stock move' #!
+      edit: 'Edit the stock move: %{name}' #?
+      new: 'add a new stock move' #?
     stock_transfers:
       confirm: 'Waiting stock transfers'
       confirm_all: 'Confirm all stock transfer'
@@ -357,10 +357,10 @@ eng:
       index: 'Subscriptions'
       new: 'Add a new subscription'
     tax_declarations:
-      edit: 'Create a Tax Declaration' #!
-      index: 'VAT Declaration' #!
-      new: 'Create a Tax report' #!
-      show: '%{nature} for period from %{started_on} to %{stopped_on}' #!
+      edit: 'Create a Tax Declaration' #?
+      index: 'VAT Declaration' #?
+      new: 'Create a Tax report' #?
+      show: '%{nature} for period from %{started_on} to %{stopped_on}' #?
     taxes:
       edit: 'Edit tax: %{name}'
       index: 'Taxes'
@@ -406,7 +406,6 @@ eng:
     companies: 'Companies'
     contacts: 'Contacts'
     cultivations: 'Cultivations'
-    currencies: 'Currencies'
     custom_field_choices: 'Custom field choices'
     custom_field_data: 'Custom field data'
     custom_fields: 'Custom fields'
@@ -628,6 +627,7 @@ eng:
     critic_stocks: 'Stocks below critical threshold'
     csv_statistics: 'CSV statistics'
     cumul: 'Accumulation of tattle and previous balance N°%{number}'
+    currency_with_code: '%{name} (%{code})'
     current: 'Current'
     custom_field_update: 'Custom field update'
     data_to_export: 'Data to export'
@@ -1253,23 +1253,23 @@ eng:
     journal_entry_lines_marked_with_letter: 'Journal entry lines have been marked with letter %{letter}'
     journal_reopened_on: 'The journal "%{journal}" has been re-opened on %{closed_on}.'
     mails_are_sent: 'The emails were sent'
-    need_balanced_journal_to_tax_declaration: 'All your journals must be closed and balanced at that date.' #!
+    need_balanced_journal_to_tax_declaration: 'All your journals must be closed and balanced at that date.' #?
     need_cash_to_record_statements: 'You must be at least create a bank account to enter a statement.'
-    need_closed_financial_year_to_declaration: 'You must have a closed financial year to create a VAT return.' #!
+    need_closed_financial_year_to_declaration: 'You must have a closed financial year to create a VAT return.' #?
     need_company_code_to_login: 'You must select your company in order to connect with that username.'
     need_entries_to_point: 'No entry was found for the period of the bank statement.'
-    need_journal_to_manage_tax_declaration: 'You must have at least one journal of various operations and a journal of sales or purchases in order to save tax returns.' #!
+    need_journal_to_manage_tax_declaration: 'You must have at least one journal of various operations and a journal of sales or purchases in order to save tax returns.' #?
     need_payment_mode_to_create_deposit: 'You must specify a mode of payment in order to make deposits'
     need_quantities_to_cancel_an_sale: 'You must specify a quantity in order to cancel the sales invoice'
     need_stocks_to_create_inventories: 'You have to manage some stocks in order to manage inventories'
-    need_stocks_warehouse_to_create_products: 'You must create a warehouse to be able to create a product' #!
+    need_stocks_warehouse_to_create_products: 'You must create a warehouse to be able to create a product' #?
     need_to_create_subscription_nature: 'You must create a type of subscription to manage your subscriptions'
     need_warehouse_to_create_purchase_line: 'You must create a warehouse to be able to create a purchase.'
-    need_warehouse_to_create_sale_line: 'You must create a warehouse to be able to create a sale' #!
+    need_warehouse_to_create_sale_line: 'You must create a warehouse to be able to create a sale' #?
     need_warehouse_to_record_stock_moves: 'You must create a warehouse to be able to manage stocks.'
     new_actual_number: 'The new number is being %{actual_number}'
     no_authenticated: 'You could not be identified. The username or password must be incorrect.'
-    no_closable_financial_year: 'No closable financial year.' #!
+    no_closable_financial_year: 'No closable financial year.' #?
     no_closable_journal: 'No closable journal'
     no_depositable_payments: 'There are no payment to deposit'
     no_existing_mandates: 'There are no mandates'
@@ -1286,7 +1286,7 @@ eng:
     purchase_already_invoiced: 'Purchase already invoiced'
     record_cannot_be_removed: 'The record can not be deleted'
     record_has_been_correctly_removed: 'The record has been removed successfully'
-    record_has_not_been_removed: 'The record has not been removed' #!
+    record_has_not_been_removed: 'The record has not been removed' #?
     restoration_finished: 'Restoring the backup has completed (in %{value} seconds). Your company ID is %{code}'
     sale_already_invoiced: 'The sale has already been invoiced: you can not define delivery '
     sale_cannot_be_updated: 'The estimate is no longer editable.'
@@ -1295,7 +1295,7 @@ eng:
     specify_filter: 'You must choose at least one search filter'
     specify_updates: 'You must specify at least one field to edit'
     unavailable_model: 'Inexistent %{model} (%{id})'
-    unknown_action: 'The requested page is unavailable (%{url})' #!
+    unknown_action: 'The requested page is unavailable (%{url})' #?
     unknown_company: 'Unknown company'
     unvalid_version_for_restore: 'The version of the software used to perform the backup does not match the current version of the software'
     update_is_done: 'The update has been made'
@@ -1306,7 +1306,7 @@ eng:
       zero: 'There are no entries to point at the moment'
     you_must_have_an_email_column: 'You must have an email address in your extraction'
     you_must_select_a_file_to_import: 'You must select a file to import'
-    you_will_lose_all_your_current_data: 'If you continue, you will lose all your data being entered. Would you continue?' #!
+    you_will_lose_all_your_current_data: 'If you continue, you will lose all your data being entered. Would you continue?' #?
   preferences:
     bank_journal: 'Default bank journal'
     bookkeep_automatically: 'Activate the automatic bookkeeping'
