Adds currency rate in journal entry form

--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -164,8 +164,8 @@ eng:
             closed_on:
               end_of_month: '%{attribute} must be an end of month (%{closed_on})'
         journal_entry:
-          closed_journal: 'The journal is closed on %{closed_on}. No updates are possible until this date.'
-          out_of_financial_year: 'The journal entry must be recorded in the period of the financial year.'
+          closed_journal: 'The journal %{journal} is closed on %{closed_on}. No updates are possible until this date.'
+          out_of_existing_financial_year: 'The journal entry must be recorded in a period corresponding to an existing financial year.'
           unbalanced: 'The journal entry is unbalanced'
         journal_entry_line:
           closed_entry: 'The journal entry is locked. You can not update it.'
