--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -557,6 +557,7 @@ fra:
         one: '%{count} erreur a empêché l''enregistrement (%{model})'
         other: '%{count} erreurs ont empêché l''enregistrement (%{model})'
   labels:
+    exchange_rate_from_x_to_y: 'Taux de change de %{x} à %{y}'
     account_accruals: 'Comptes de régularisation' #?
     account_attorney_to_create: '-- Créer automatiquement un compte mandataire --' #?
     account_claims_assets: 'Créances' #?
@@ -710,7 +711,7 @@ fra:
     critic_stocks: 'Stocks sous le seuil critique'
     csv_statistics: 'Statistiques à exporter au format CSV'
     cumul: 'Cumul du total et du solde précédent N°%{number}'
-    # currency_with_code: '%{name} (%{code})'
+    currency_with_code: '%{name} - %{code}'
     current: 'En cours'
     current_letter: 'Lettre en cours : %{letter}' #?
     custom_field_update: 'Modifier le champ personnalisé'
