--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -558,6 +558,7 @@ fra:
         other: '%{count} erreurs ont empêché l''enregistrement (%{model})'
   labels:
     exchange_rate_from_x_to_y: 'Taux de change de %{x} à %{y}'
+    total_in_currency: 'Total (%{currency})'
     account_accruals: 'Comptes de régularisation' #?
     account_attorney_to_create: '-- Créer automatiquement un compte mandataire --' #?
     account_claims_assets: 'Créances' #?
