--- a/config/locales/jpn/support.yml
+++ b/config/locales/jpn/support.yml
@@ -74,7 +74,7 @@ jpn:
       format:
         delimiter: ''
         format: '%u%n'
-        # negative_format: '-%u%n'
+        # negative_format: '-%n%u'
         precision: 2
         separator: '.'
         unit: '円'
