--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -341,6 +341,7 @@ spa:
       # edit: 'Edit the sale type: %{name}'
       # index: 'Sale types'
       # new: 'Add a new type of sale'
+      # show: 'Sale type: %{name}'
     sales:
       # abort: 'Abort sale'
       cancel: 'Paso en activo de la factura %{number}'
