--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -297,6 +297,7 @@ jpn:
     purchase_lines:
       # edit: 'Edit the purhase order line'
       # new: 'Add a product to the purchase'
+    purchase_natures: #?
     purchases:
       # abort: 'Abort'
       # confirm: 'Confirm order and wait for deliveries'
