--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -736,6 +736,7 @@ eng:
     # purchase_invoices: 'Purchase invoices'
     purchase_line: 'Purchase line'
     purchase_lines: 'Purchase order lines'
+    # purchase_natures: 'Purchase natures'
     purchased_on: 'Purchased on'
     purchases: 'Purchase orders'
     purchases_account: 'Purchases account'
@@ -1005,6 +1006,7 @@ eng:
           transfer:
             name: 'Transfer'
         product_category_name: 'Default category'
+        purchase_nature_name: 'Standard'
         role:
           name:
             admin: 'Manager'
@@ -1161,7 +1163,7 @@ eng:
         single: 'FY%{first_year}'
     incoming_payment:
       bookkeep: '[%{resource} %{number}] %{mode} %{check_number} of %{payer} (%{expenses})'
-      label: '%{number}. %{usable_amount}/%{amount} %{currency}, %{mode} of %{payer} on %{date}'
+      label: '%{number}. %{usable_amount}/%{amount}, %{mode} of %{payer} on %{date}'
     incoming_payment_use:
       bookkeep: '[%{resource}] %{mode} (%{payment_number}) received from %{attorney} for %{client} (%{expense_number})'
     inventory_line:
@@ -1234,7 +1236,7 @@ eng:
       sale: 'Sale %{number}'
     outgoing_payment:
       bookkeep: '[%{resource} %{number}] %{mode} %{check_number} for %{payee} (%{expenses})'
-      label: '%{number}. %{usable_amount}/%{amount} %{currency}, %{mode} for %{payee} on %{date}'
+      label: '%{number}. %{usable_amount}/%{amount}, %{mode} for %{payee} on %{date}'
     outgoing_payment_use:
       bookkeep: '[%{resource}] %{mode} (%{payment_number}) received from %{attorney} for %{supplier} (%{expense_number})'
     price:
