--- a/config/locales/eng/prints/purchase_order.xml
+++ b/config/locales/eng/prints/purchase_order.xml
@@ -39,8 +39,8 @@
 
       <part height="14mm">
         <set right="90mm" top="1mm">
-          <text value="Totaux ({{purchase_order.lines[0].price.currency.code}})" top="0.5mm" left="34mm" align="right" bold="true"/>
-          <text value="Net à payer ({{purchase_order.lines[0].price.currency.code}})" top="6mm" left="34mm" align="right" bold="true" size="11.5"/>
+          <text value="Totaux ({{purchase_order.lines[0].price.currency}})" top="0.5mm" left="34mm" align="right" bold="true"/>
+          <text value="Net à payer ({{purchase_order.lines[0].price.currency}})" top="6mm" left="34mm" align="right" bold="true" size="11.5"/>
           <text value="{{purchase_order.amount?numeric}}" top="6mm" left="55mm" align="center" bold="true" size="12"/>
           <text value="{{purchase_order.pretax_amount?numeric}}" top="0.5mm" left="54.5mm" align="right"/>
           <text value="{{purchase_order.taxes_amount?numeric}}" top="0.5mm" left="74.5mm" align="right"/>
