--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -1399,6 +1399,7 @@ arb:
     update_params: 'تعديل البحث'
     upload: 'تحميل الملفات' #?
     # usage: 'Usage'
+    # use_incoming_payment: 'Add incoming payment %{payment}'
     use_renew: 'اختر دفتر يومي للتقارير الجديدة'
     used_accounts: 'الحسابات المستخدمة فقط'
     user_create: 'اضافة مستخدم جديد' #?
