--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -139,6 +139,7 @@ eng:
         too_long: '%{attribute} is too long (maximum is %{count} characters)'
         too_short: '%{attribute} is too short (minimum is %{count} characters)'
         wrong_length: '%{attribute} is the wrong length (should be %{count} characters)'
+        currency_does_not_match: 'The currency of the %{attribute} is different from %{currency}'
       models:
         cash:
           currency_does_not_match: 'The currency of the %{journal} is different from that specified for the cash'
@@ -275,7 +276,7 @@ eng:
       profession: 'Profession'
       purchase: 'Purchase order'
       purchase_line: 'Purchase order line'
-      # purchase_nature: 'Purchase nature'
+      purchase_nature: 'Purchase nature'
       role: 'Role'
       sale: 'sale'
       sale_line: 'sale line'
@@ -318,20 +319,20 @@ eng:
     area_unit: 'Area unit'
     areas: 'Areas'
     arrived_on: 'Arrived on'
-    # asset: 'Asset'
-    # asset_depreciations: 'Asset depreciations'
-    # assets: 'Assets'
+    asset: 'Asset'
+    asset_depreciations: 'Asset depreciations'
+    assets: 'Assets'
     assimilated_taxes_amount: 'Assimilated taxes amount'
     atmospheric_pressure: 'Atmospheric pressure'
     attorney: 'Attorney'
     attorney_account: 'Attorney account'
     attorney_accounts: 'Attorney accounts'
-    # attorneys: 'Attorneys'
+    attorneys: 'Attorneys'
     attribute_name: 'Attribute name'
     authorized_payments_count: 'Authorized payments count'
     available_prices: 'Available prices'
     available_products: 'Available products'
-    # available_stocks: 'Available stocks'
+    available_stocks: 'Available stocks'
     balance: 'Balance'
     balance_amount: 'Balance amount'
     balances: 'Balances'
@@ -348,12 +349,12 @@ eng:
     boolean_value: 'Boolean value'
     born_on: 'Born on'
     building: 'Building'
-    # buildings: 'Buildings'
+    buildings: 'Buildings'
     by_default: 'By default'
     cache: 'Cache'
     cash: 'Cash'
     cash_journals: 'Cash journals'
-    # cash_transfers: 'Cash transfers'
+    cash_transfers: 'Cash transfers'
     cashes: 'Bank accounts'
     cashes_accounts: 'Cashes accounts'
     catalog_description: 'Catalog description'
@@ -365,10 +366,10 @@ eng:
     charges_accounts: 'Charges accounts'
     check_number: 'Check number'
     check_state: 'Check state'
-    # child_kinships: 'Child kinships'
-    # child_land_parcel: 'Child land parcel'
+    child_kinships: 'Child kinships'
+    child_land_parcel: 'Child land parcel'
     children: 'Children'
-    # choice_custom_fields: 'Choice custom fields'
+    choice_custom_fields: 'Choice custom fields'
     choice_value: 'Choice value'
     choices: 'Choices'
     choices_count: 'Choices count'
@@ -408,7 +409,7 @@ eng:
     consumption: 'Consumption'
     contact: 'Contact'
     contacts: 'Contacts'
-    # conveyors: 'Conveyors'
+    conveyors: 'Conveyors'
     country: 'Country'
     created_at: 'Created at'
     created_on: 'Created on'
@@ -417,12 +418,12 @@ eng:
     credited_quantity: 'Credited quantity'
     credits: 'Credits'
     critic_quantity_min: 'Critic quantity min'
-    # critic_stocks: 'Critic stocks'
+    critic_stocks: 'Critic stocks'
     crypt_key: 'Crypt key'
     crypt_mode: 'Crypt mode'
     currency: 'Currency'
     # currency_precision: 'Currency precision'
-    # currency_rate: 'Currency rate'
+    currency_rate: 'Currency rate'
     current_financial_year: 'Current financial year'
     custom_field: 'Custom field'
     custom_field_choices: 'Custom field choices'
@@ -439,7 +440,7 @@ eng:
     declared_on: 'Declared on'
     default_contact: 'Default contact'
     default_currency: 'Default currency'
-    # default_stock: 'Default stock'
+    default_stock: 'Default stock'
     deferred_payment: 'Deferred payment'
     delays: 'Delays'
     deleted_at: 'Deleted at'
@@ -457,14 +458,14 @@ eng:
     deposit: 'Deposit'
     depositable_payments: 'Embankable payments'
     depositables_account: 'Embankables account'
-    # depositables_incoming_payment_modes: 'Depositables incoming payment modes'
-    # depositables_journal: 'Depositables journal'
+    depositables_incoming_payment_modes: 'Depositables incoming payment modes'
+    depositables_journal: 'Depositables journal'
     deposits: 'Deposits'
     deprecated_amount: 'Deprecated amount'
     depreciable_amount: 'Depreciable amount'
     depreciation: 'Depreciation'
     depreciation_method: 'Depreciation method'
-    # depreciations: 'Depreciations'
+    depreciations: 'Depreciations'
     description: 'Description'
     diff_less: 'Diff less'
     diff_more: 'Diff more'
@@ -488,7 +489,7 @@ eng:
     emitter_cash: 'Emitter cash'
     emitter_currency: 'Emitter currency' #?
     emitter_currency_rate: 'Emitted currency rate' #?
-    # emitter_journal_entry: 'Emitter journal entry'
+    emitter_journal_entry: 'Emitter journal entry'
     employed: 'Employed'
     employees: 'Employees'
     employment: 'Employment'
@@ -504,7 +505,7 @@ eng:
     entity_natures: 'Person types'
     entries: 'Entries'
     entry: 'Entry'
-    # entry_lines: 'Entry lines'
+    entry_lines: 'Entry lines'
     establishment: 'Establishment'
     establishments: 'Establishments'
     event_natures: 'Event types'
@@ -513,11 +514,11 @@ eng:
     excise: 'Excise'
     expense: 'Expense'
     expense_type: 'Expense type'
-    # expenses: 'Expenses'
+    expenses: 'Expenses'
     expiration: 'Expiration'
     expired_on: 'Expired on'
     exportable: 'Exportable'
-    # exportable_columns: 'Exportable columns'
+    exportable_columns: 'Exportable columns'
     expression: 'Expression'
     extension: 'Extension'
     family: 'Family'
@@ -546,22 +547,22 @@ eng:
     global_count: 'Global count'
     global_credit: 'Global credit'
     global_debit: 'Global debit'
-    # godchildren: 'Godchildren'
-    # group: 'Group'
+    godchildren: 'Godchildren'
+    group: 'Group'
     has_downpayment: 'Has downpayment'
     hashed_password: 'Hashed password'
     hour_duration: 'Hour duration'
     iban: 'IBAN'
     iban_label: 'IBAN'
     id: 'ID'
-    # immobilizations_products: 'Immobilizations products'
+    immobilizations_products: 'Immobilizations products'
     importance: 'Importance'
     in_cash: 'In cash'
     in_name: 'In name'
     included: 'Included'
-    # incoming_deliveries: 'Incoming deliveries'
-    # incoming_delivery_lines: 'Incoming delivery lines'
-    # incoming_delivery_modes: 'Incoming delivery modes'
+    incoming_deliveries: 'Incoming deliveries'
+    incoming_delivery_lines: 'Incoming delivery lines'
+    incoming_delivery_modes: 'Incoming delivery modes'
     incoming_payment_modes: 'Incoming payment modes'
     incoming_payment_uses: 'Incoming payment parts'
     incoming_payments: 'Incoming payments'
@@ -589,8 +590,8 @@ eng:
     journals: 'Journals'
     key: 'Key'
     label: 'Label'
-    # land_parcel_groups: 'Land parcel groups'
-    # land_parcel_kinships: 'Land parcel kinships'
+    land_parcel_groups: 'Land parcel groups'
+    land_parcel_kinships: 'Land parcel kinships'
     land_parcels: 'Land parcels'
     language: 'Language'
     last_bank_statement: 'Last bank statement'
@@ -627,14 +628,14 @@ eng:
     lost: 'Lost'
     luminance: 'Luminance'
     mail: 'Mail'
-    # mail_columns: 'Mail columns'
+    mail_columns: 'Mail columns'
     major_accounts: 'Major accounts'
     mandates: 'Mandates'
     min_duration: 'Min duration'
     mobile: 'Mobile'
     mode: 'Mode'
     moved_on: 'Moved on'
-    # moves: 'Moves'
+    moves: 'Moves'
     name: 'Name'
     name_1_to_2: 'Name 1 to 2'
     name_2_to_1: 'Name 2 to 1'
@@ -668,20 +669,20 @@ eng:
     original_name: 'Original name'
     outgoing_deliveries: 'Outgoing deliveries'
     outgoing_delivery_lines: 'Outgoing delivery lines'
-    # outgoing_delivery_modes: 'Outgoing delivery modes'
+    outgoing_delivery_modes: 'Outgoing delivery modes'
     outgoing_payment_modes: 'Disbursement modes'
     outgoing_payment_uses: 'Disbursement parts'
     outgoing_payments: 'Disbursements'
-    # output_conveyors: 'Output conveyors'
+    output_conveyors: 'Output conveyors'
     owner: 'Owner'
     owner_type: 'Owner type'
     paid_account: 'Account paid'
     paid_amount: 'Paid amount'
     paid_on: 'Paid on'
-    # paid_taxes: 'Paid taxes'
+    paid_taxes: 'Paid taxes'
     parent: 'Parent'
-    # parent_kinships: 'Parent kinships'
-    # parent_land_parcel: 'Parent land parcel'
+    parent_kinships: 'Parent kinships'
+    parent_land_parcel: 'Parent land parcel'
     password: 'Password'
     password_confirmation: 'Confirmation of password'
     payee: 'Payee'
@@ -718,11 +719,11 @@ eng:
     product_components: 'Product components'
     productable_products: 'Productable products'
     production_chain: 'Production chain'
-    # production_chain_work_center: 'Production chain work center'
-    # production_chain_work_center_lines: 'Production chain work center lines'
-    # production_chain_work_center_uses: 'Production chain work center uses'
-    # production_chain_work_centers: 'Production chain work centers'
-    # production_chains: 'Production chains'
+    production_chain_work_center: 'Production chain work center'
+    production_chain_work_center_lines: 'Production chain work center lines'
+    production_chain_work_center_uses: 'Production chain work center uses'
+    production_chain_work_centers: 'Production chain work centers'
+    production_chains: 'Production chains'
     products: 'Products'
     products_accounts: 'Products accounts'
     profession: 'Profession'
@@ -733,14 +734,14 @@ eng:
     published: 'Published'
     purchase: 'Purchase'
     purchase_amount: 'Purchase amount'
-    # purchase_invoices: 'Purchase invoices'
+    purchase_invoices: 'Purchase invoices'
     purchase_line: 'Purchase line'
     purchase_lines: 'Purchase order lines'
-    # purchase_natures: 'Purchase natures'
+    purchase_natures: 'Purchase natures'
     purchased_on: 'Purchased on'
     purchases: 'Purchase orders'
     purchases_account: 'Purchases account'
-    # purchases_products: 'Purchases products'
+    purchases_products: 'Purchases products'
     quantity: 'Quantity'
     quantity_max: 'Quantity max'
     quantity_min: 'Quantity min'
@@ -788,10 +789,10 @@ eng:
     sales_account: 'Sales account'
     sales_conditions: 'Sales conditions'
     sales_invoices: 'Sales invoices'
-    # sales_products: 'Sales products'
+    sales_products: 'Sales products'
     salt: 'Salt'
     scheduled: 'Scheduled'
-    # second_stock_move: 'Second stock move'
+    second_stock_move: 'Second stock move'
     second_warehouse: 'Second warehouse'
     self_bank_accounts: 'Self bank accounts'
     self_cashes: 'Self cashes'
@@ -868,23 +869,23 @@ eng:
     transport: 'Transport'
     transport_on: 'Transport on'
     transporter: 'Transporter'
-    # transporter_sales: 'Transporter sales'
+    transporter_sales: 'Transporter sales'
     transporters: 'Transporters'
     transports: 'Transports'
-    # unconfirmed_stock_transfers: 'Unconfirmed stock transfers'
-    # undelivered_incoming_deliveries: 'Undelivered incoming deliveries'
-    # undelivered_outgoing_deliveries: 'Undelivered outgoing deliveries'
+    unconfirmed_stock_transfers: 'Unconfirmed stock transfers'
+    undelivered_incoming_deliveries: 'Undelivered incoming deliveries'
+    undelivered_outgoing_deliveries: 'Undelivered outgoing deliveries'
     undelivered_quantity: 'Undelivered quantity'
     unique_tracking: 'Unique tracking'
     unit: 'Unit'
     unit_quantity: 'Unit quantity'
     units: 'Units'
-    # unlocked_payments: 'Unlocked payments'
-    # unpaid_responsibles: 'Unpaid responsibles'
-    # unpaid_sales: 'Unpaid sales'
+    unlocked_payments: 'Unlocked payments'
+    unpaid_responsibles: 'Unpaid responsibles'
+    unpaid_sales: 'Unpaid sales'
     unquantifiable: 'Unquantifiable'
-    # untransportered_deliveries: 'Untransportered deliveries'
-    # unused_conveyors: 'Unused conveyors'
+    untransportered_deliveries: 'Untransportered deliveries'
+    unused_conveyors: 'Unused conveyors'
     updated_at: 'Updated at'
     updater: 'Updater'
     usable_incoming_payments: 'Usable incoming payments'
@@ -893,7 +894,7 @@ eng:
     usage_duration: 'Usage duration'
     use_range: 'Use range'
     used_amount: 'Used amount'
-    # useful_lines: 'Useful lines'
+    useful_lines: 'Useful lines'
     user: 'User'
     users: 'Users'
     uses: 'Uses'
@@ -902,8 +903,8 @@ eng:
     vat_submissive: 'Vat submissive'
     virtual: 'Virtual'
     virtual_quantity: 'Virtual quantity'
-    # waiting_deliveries: 'Waiting deliveries'
-    # waiting_transporters: 'Waiting transporters'
+    waiting_deliveries: 'Waiting deliveries'
+    waiting_transporters: 'Waiting transporters'
     warehouse: 'Warehouse'
     warehouses: 'Warehouses'
     webpass: 'Webpass'
@@ -914,7 +915,7 @@ eng:
     with_deposit: 'With deposit'
     with_tracking: 'With tracking'
     with_transport: 'With transport'
-    # work_center: 'Work center'
+    work_center: 'Work center'
   models:
     account:
       label: '%{number} - %{name}'
