--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -151,6 +151,7 @@ fra:
         too_long: '%{attribute} est trop long (%{count} caractères maximum)'
         too_short: '%{attribute} est trop court (%{count} caractères minimum)'
         wrong_length: '%{attribute} n''est pas d''une bon longueur (%{count} caractères)'
+        currency_does_not_match: 'La devise de "%{attribute}" ne correspond pas celle attendue : %{currency}'
       models:
         cash:
           # currency_does_not_match: 'The currency of the %{journal} is different from that specified for the cash'
