--- a/installer/debian/debian/changelog
+++ b/installer/debian/debian/changelog
@@ -1,3 +1,9 @@
+ekylibre (0.3.2.2) stable; urgency=low
+
+  * Fixes bug on debian packages due to use of sudo
+
+ -- Brice Texier <brice.texier@ekylibre.org>  Thu, 12 Apr 2012 16:16:45 +0200
+
 ekylibre (0.3.2.1) stable; urgency=low
 
   * Fixes bug on debian packages due to missing dependencies
