--- a/config/locales/eng/support.yml
+++ b/config/locales/eng/support.yml
@@ -63,9 +63,13 @@ eng:
     export_as: 'Export as %{exported}...'
     items_per_page: 'Items per page'
     menu: 'Menu'
-    next: 'Next'
     no_records: 'No records'
-    previous: 'Previous'
+    pagination:
+      showing_x_to_y_of_total: 'Showing %{x} to %{y} of %{total}'
+      first: 'First page'
+      next: 'Next page'
+      last: 'Last page'
+      previous: 'Previous page'
     x_per_page:
       one: '%{count} per page'
       other: '%{count} per page'
